@@ -150,6 +150,8 @@ define(['app', 'report/helpers'], function (app, reportHelpers) {
             vm.decimals = (vm.device.SwitchTypeVal == 3) ? vm.device.Divider.numDecimalsDiv1() : 3;
             vm.isMonthView = vm.selectedMonth > 0;
 
+			$.devIdx = vm.device.idx;
+
             getData();
         }
         
@@ -245,6 +247,10 @@ define(['app', 'report/helpers'], function (app, reportHelpers) {
                 .draw();
         }
 
+		function reloadPage() {
+			window.location.reload();
+		}
+
         function showUsageChart(data) {
             var chartElement = $element.find('#usagegraph');
             var series = [];
@@ -291,6 +297,17 @@ define(['app', 'report/helpers'], function (app, reportHelpers) {
                     valueDecimals: vm.decimals
                 },
                 plotOptions: {
+					series: {
+						point: {
+							events: {
+								click: function (event) {
+									if (vm.isMonthView) {
+										chartPointClickNew(event, false, reloadPage);
+									}
+								}
+							}
+						}
+					},
                     column: {
                         minPointLength: 4,
                         pointPadding: 0.1,
